--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/main.css" />
+    <link href="https://fonts.googleapis.com/css?family=Raleway:300,400,700" rel="stylesheet">
+    <link rel="stylesheet" href="assets/css/lightbox.css" />
     <noscript>
         <link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 </head>
@@ -42,7 +44,7 @@
             <ul class="links">
                 <li class="active"><a href="index.html">Services</a></li>
                 <li><a href="#contact">Contact</a></li>
-                 <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="gallery.html">Gallery</a></li>
                 <!--                <li><a href="elements.html">Elements Reference</a></li>-->
             </ul>
             <ul class="icons">
@@ -176,6 +178,99 @@
             <!-- Footer -->
             <footer>
                 <i class="fa fa-paper-plane-o fa-2x"></i>
+
+                <div class="container-fluid">
+
+                    <h2 class="my-4 font-weight-bold">Gallery</h2>
+
+                    <div class="grid">
+                        <div class="grid-sizer"></div>
+                        <div class="grid-item ">
+                            <a href="images/gallery/1.jpg"><img src="images/gallery/1.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/2.jpg"><img src="images/gallery/2.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/3.jpg"><img src="images/gallery/3.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/4.jpg"><img src="images/gallery/4.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/5.jpg"><img src="images/gallery/5.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/12.jpg"><img src="images/gallery/12.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/6.jpg"><img src="images/gallery/6.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/7.jpg"><img src="images/gallery/7.jpg" alt="" title="" /></a>
+                        </div>
+
+                        <div class="grid-item">
+                            <a href="images/gallery/9.jpg"><img src="images/gallery/9.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/10.jpg"><img src="images/gallery/10.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/11.jpg"><img src="images/gallery/11.jpg" alt="" title="" /></a>
+                        </div>
+                        
+                        <div class="grid-item">
+                            <a href="images/gallery/13.jpg"><img src="images/gallery/13.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/14.jpg"><img src="images/gallery/14.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/15.jpg"><img src="images/gallery/15.jpg" alt="" title="" /></a>
+                        </div>
+
+                        <div class="grid-item">
+                            <a href="images/gallery/17.jpg"><img src="images/gallery/17.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/18.jpg"><img src="images/gallery/18.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/19.jpg"><img src="images/gallery/19.jpg" alt="" title="" /></a>
+                        </div>
+
+                        <div class="grid-item">
+                            <a href="images/gallery/21.jpg"><img src="images/gallery/21.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/22.jpg"><img src="images/gallery/22.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/23.jpg"><img src="images/gallery/23.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/24.jpg"><img src="images/gallery/24.jpg" alt="" title="" /></a>
+                        </div>
+
+                   <!--
+                        <div class="grid-item">
+                            <a href="images/gallery/16.jpg"><img src="images/gallery/16.jpg" alt="" title="" /></a>
+                        </div>
+-->
+                   <!--
+                        <div class="grid-item">
+                            <a href="images/gallery/20.jpg"><img src="images/gallery/20.jpg" alt="" title="" /></a>
+                        </div>
+-->
+                   <!--
+                        <div class="grid-item">
+                            <a href="images/gallery/8.jpg"><img src="images/gallery/8.jpg" alt="" title="" /></a>
+                        </div>
+-->
+                    </div>
+
+                </div>
                 <!--
                 <div class="pagination">
                     <a href="#" class="previous">Prev</a>
@@ -245,6 +340,7 @@
                                     q.parentNode.insertBefore(js, q)
                                 }
                             })()
+
                         </script>
                     </header>
 
@@ -285,6 +381,7 @@
             <ul>
                 <li>&copy; <script>
                         document.write(new Date().getFullYear())
+
                     </script>
                 </li>
                 <li>Design: <a href="https://riju.co">Riju Pramanik</a></li>
@@ -301,6 +398,9 @@
     <script src="assets/js/breakpoints.min.js"></script>
     <script src="assets/js/util.js"></script>
     <script src="assets/js/main.js"></script>
+    <script src="https://unpkg.com/masonry-layout@4/dist/masonry.pkgd.min.js"></script>
+    <script src="https://unpkg.com/imagesloaded@4/imagesloaded.pkgd.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/simplelightbox/1.17.3/simple-lightbox.min.js" integrity="sha256-HV4wPYJyOpwA7pnJkW5Sum8jQ7euC3A3cl/NtqP1j9k=" crossorigin="anonymous"></script>
     <script>
         $('a[href*="#"]')
             // Remove links that don't actually link to anything
@@ -336,6 +436,22 @@
                     }
                 }
             });
+
+        // init Masonry
+        var $grid = $('.grid').masonry({
+            itemSelector: '.grid-item',
+            percentPosition: true,
+            columnWidth: '.grid-sizer'
+        });
+
+        // layout Masonry after each image loads
+        $grid.imagesLoaded().progress(function() {
+            $grid.masonry();
+        });
+        var lightbox = $('.grid-item a').simpleLightbox();
+
     </script>
 
-</body></html>
+</body>
+
+</html>
