--- a/index.html
+++ b/index.html
@@ -186,89 +186,89 @@
                     <div class="grid">
                         <div class="grid-sizer"></div>
                         <div class="grid-item ">
-                            <a href="images/gallery/1.jpg"><img src="images/gallery/1.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/1.jpg"><img src="images/thumbs/1.jpg" alt="" title="" /></a>
                         </div>
                         <div class="grid-item">
-                            <a href="images/gallery/2.jpg"><img src="images/gallery/2.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/2.jpg"><img src="images/thumbs/2.jpg" alt="" title="" /></a>
                         </div>
                         <div class="grid-item">
-                            <a href="images/gallery/3.jpg"><img src="images/gallery/3.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/3.jpg"><img src="images/thumbs/3.jpg" alt="" title="" /></a>
                         </div>
                         <div class="grid-item">
-                            <a href="images/gallery/4.jpg"><img src="images/gallery/4.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/4.jpg"><img src="images/thumbs/4.jpg" alt="" title="" /></a>
                         </div>
                         <div class="grid-item">
-                            <a href="images/gallery/5.jpg"><img src="images/gallery/5.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/5.jpg"><img src="images/thumbs/5.jpg" alt="" title="" /></a>
                         </div>
                         <div class="grid-item">
-                            <a href="images/gallery/12.jpg"><img src="images/gallery/12.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/12.jpg"><img src="images/thumbs/12.jpg" alt="" title="" /></a>
                         </div>
                      
                         <div class="grid-item">
-                            <a href="images/gallery/7.jpg"><img src="images/gallery/7.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/7.jpg"><img src="images/thumbs/7.jpg" alt="" title="" /></a>
                         </div>
 
                         <div class="grid-item">
-                            <a href="images/gallery/9.jpg"><img src="images/gallery/9.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/9.jpg"><img src="images/thumbs/9.jpg" alt="" title="" /></a>
                         </div>
                         <div class="grid-item">
-                            <a href="images/gallery/10.jpg"><img src="images/gallery/10.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/10.jpg"><img src="images/thumbs/10.jpg" alt="" title="" /></a>
                         </div>
                         <div class="grid-item">
-                            <a href="images/gallery/11.jpg"><img src="images/gallery/11.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/11.jpg"><img src="images/thumbs/11.jpg" alt="" title="" /></a>
                         </div>
                         
                         <div class="grid-item">
-                            <a href="images/gallery/13.jpg"><img src="images/gallery/13.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/13.jpg"><img src="images/thumbs/13.jpg" alt="" title="" /></a>
                         </div>
                         <div class="grid-item">
-                            <a href="images/gallery/14.jpg"><img src="images/gallery/14.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/14.jpg"><img src="images/thumbs/14.jpg" alt="" title="" /></a>
                         </div>
                         <div class="grid-item">
-                            <a href="images/gallery/15.jpg"><img src="images/gallery/15.jpg" alt="" title="" /></a>
-                        </div>
-
-                        <div class="grid-item">
-                            <a href="images/gallery/17.jpg"><img src="images/gallery/17.jpg" alt="" title="" /></a>
-                        </div>
-                        <div class="grid-item">
-                            <a href="images/gallery/18.jpg"><img src="images/gallery/18.jpg" alt="" title="" /></a>
-                        </div>
-                        <div class="grid-item">
-                            <a href="images/gallery/19.jpg"><img src="images/gallery/19.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/15.jpg"><img src="images/thumbs/15.jpg" alt="" title="" /></a>
                         </div>
 
                         <div class="grid-item">
-                            <a href="images/gallery/21.jpg"><img src="images/gallery/21.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/17.jpg"><img src="images/thumbs/17.jpg" alt="" title="" /></a>
                         </div>
                         <div class="grid-item">
-                            <a href="images/gallery/22.jpg"><img src="images/gallery/22.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/18.jpg"><img src="images/thumbs/18.jpg" alt="" title="" /></a>
                         </div>
                         <div class="grid-item">
-                            <a href="images/gallery/23.jpg"><img src="images/gallery/23.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/19.jpg"><img src="images/thumbs/19.jpg" alt="" title="" /></a>
+                        </div>
+
+                        <div class="grid-item">
+                            <a href="images/gallery/21.jpg"><img src="images/thumbs/21.jpg" alt="" title="" /></a>
                         </div>
                         <div class="grid-item">
-                            <a href="images/gallery/24.jpg"><img src="images/gallery/24.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/22.jpg"><img src="images/thumbs/22.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/23.jpg"><img src="images/thumbs/23.jpg" alt="" title="" /></a>
+                        </div>
+                        <div class="grid-item">
+                            <a href="images/gallery/24.jpg"><img src="images/thumbs/24.jpg" alt="" title="" /></a>
                         </div>
 
                    <!--
                         <div class="grid-item">
-                            <a href="images/gallery/16.jpg"><img src="images/gallery/16.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/16.jpg"><img src="images/thumbs/16.jpg" alt="" title="" /></a>
                         </div>
 -->
                    <!--
                         <div class="grid-item">
-                            <a href="images/gallery/20.jpg"><img src="images/gallery/20.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/20.jpg"><img src="images/thumbs/20.jpg" alt="" title="" /></a>
                         </div>
 -->
                    <!--
                         <div class="grid-item">
-                            <a href="images/gallery/8.jpg"><img src="images/gallery/8.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/8.jpg"><img src="images/thumbs/8.jpg" alt="" title="" /></a>
                         </div>
 -->
 <!--
                       <div class="grid-item">
-                            <a href="images/gallery/6.jpg"><img src="images/gallery/6.jpg" alt="" title="" /></a>
+                            <a href="images/gallery/6.jpg"><img src="images/thumbs/6.jpg" alt="" title="" /></a>
                         </div>
 -->
                     </div>
